// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explorer_RandoBox component renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  width: 300px;
  border: blue dotted 2px;
  background-color: rgba(17,124,158,.2);
}

<div
  className="c0"
/>
`;

exports[`Explorer_RandoBtn component renders 1`] = `
.c0 {
  margin: 15px 0px;
  height: 35px;
  background-color: rgb(17,124,158);
  color: white;
  border-radius: 5px;
  font-size: 18px;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`Explorer_RandoCountry component renders 1`] = `
.c0 {
  font-family: 'Montserrat',sans-serif;
  font-size: 18px;
}

<h5
  className="c0"
/>
`;

exports[`Explorer_RegionContainer component renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 10px;
  height: 300px;
  width: 1000px;
}

@media (max-width:1000px) {
  .c0 {
    height: 300px;
    width: 860px;
  }
}

@media (max-width:861px) {
  .c0 {
    height: 300px;
    width: 600px;
    margin: 20px;
    border-radius: 10px;
  }
}

@media (max-width:697px) {
  .c0 {
    height: 300px;
    width: 300px;
    margin: 20px;
    border-radius: 10px;
  }
}

<div
  className="c0"
/>
`;
